# sarzak-cli

./: .gitignore  .gitlab-ci.yml  Cargo.toml
models/: blank.json
src/: boink.rs  config.rs  lib.rs  sarzak.rs
