[package]
name = "sarzak-cli"
version = "1.0.0"
authors = ["Keith T. Star <uberfoo@me.com>"]
edition = "2021"

[[bin]]
name = "sarzak"
path = "src/sarzak.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
heck = "0.4.0"
log = "0.4.17"
nut = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/nut.git", branch = "develop" }
sarzak = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/sarzak.git", branch = "develop" }
grace = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/grace.git", branch = "develop" }
# nut = { path = "../nut" }
# sarzak = { path = "../sarzak" }
# grace = { path = "../grace" }
pretty_env_logger = "0.4.0"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.6.0"
uuid = { version = "1.2.2", features = ["v5"] }
