[package]
name = "sarzak-cli"
version = "1.1.0"
authors = ["Keith T. Star <uberfoo@me.com>"]
edition = "2021"

[[bin]]
name = "sarzak"
path = "src/sarzak.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
heck = "0.4.0"
log = "0.4.17"
# nut = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/nut.git", branch = "develop" }
nut = { path = "../nut" }
# chacha = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/chacha.git", branch = "develop" }
chacha = { path = "../chacha" }
# sarzak = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/sarzak.git", branch = "develop" }
sarzak = { path = "../sarzak" }
# grace = { git = "https://gitlab-runner:7kzem8nVeizSJQnLPWFY@git.uberfoo.com/sarzak/grace.git", branch = "develop" }
grace = { path = "../grace" }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.6.0"
uuid = { version = "1.2.2", features = ["v5"] }

egui = { version = "0.21.0", optional = true }
eframe = { version = "0.21.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
], optional = true }
ansi_term = "0.12.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[features]
gui = ["dep:egui", "dep:eframe"]
