[package]
name = "sarzak-cli"
version = "1.1.0"
authors = ["Keith T. Star <uberfoo@me.com>"]
edition = "2021"

[[bin]]
name = "sarzak"
path = "src/sarzak.rs"

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
heck = "0.4.0"
log = "0.4.17"
nut = { git = "https://github.com/uberFoo/nut" }
################################################################################
# Note to self: when you see weird compiler errors about not being able to find
# the compile trait, make sure that grace is pointing at the same sarzak!
################################################################################
sarzak = { git = "https://github.com/uberFoo/sarzak", default-features = false, tag = "v2.0.0", features = [
    "lu-dog-rwlock",
] }
grace = { git = "https://github.com/uberFoo/grace.git", branch = "develop" }
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.6.0"
uuid = { version = "1.2.2", features = ["v5"] }

egui = { version = "0.21.0", optional = true }
eframe = { version = "0.21.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
], optional = true }
ansi_term = "0.12.1"
color-backtrace = "0.5.1"

# [patch."https://github.com/uberFoo/grace.git"]
# grace = { path = "../grace" }

# [patch."https://github.com/uberFoo/sarzak"]
# sarzak = { path = "../sarzak" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[features]
gui = ["dep:egui", "dep:eframe"]
